[package]
name = "opengl_rs"
version = "0.1.0"
authors = ["5aitama <alexisgougaut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["swizzle"] }
gl = "0.14.0"
glfw = "0.23.0"
image = "0.19.0"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.4"
rand = "0.5.5"